--- a/tools-library/src/main/res/values/strings.xml
+++ b/tools-library/src/main/res/values/strings.xml
@@ -1,7 +1,3 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources >
     <string name="app_name">RxTools</string>
-
-    <string name="loading" tools:ignore="TypographyEllipsis">请稍后...</string>
-    <string name="no_net">网络不可用,请检查你的网络</string>
-    <string name="net_error">网络访问错误，请稍后再试</string>
 </resources>
