--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Medal</string>
     <string name="homepage">首页</string>
     <string name="trade">购物</string>
@@ -6,6 +6,7 @@
     <string name="login">登录</string>
 
 
+    <string name="loading" tools:ignore="TypographyEllipsis">请稍后...</string>
     <string name="share_contents">来自「AndroidFire」的分享：%1$s %2$s</string>
     <string name="news_from">%1$s %2$s</string>
     <string name="photo_detail_num">%1$d/%2$d</string>
